2008-08-16  Karl Berry  <karl@tug.org>

	* pretest 4.12.94.

2008-08-15  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_thumbpdf): needs $in_dir on the filename.
	Report from: Christoph Spiel, 13 Aug 2008 08:27:16.

2008-08-15  Ben Pfaff  <blp@cs.stanford.edu>  (tiny change)

	* makeinfo/makeinfo.c (remember_brace_1): always xstrdup.
	Avoids seg fault on input of {x}@y, e.g., makeinfo texinfo.tex.
	Sent 14 Aug 2008 21:35:19.

2008-08-14  Karl Berry  <karl@gnu.org>

	* info/info.c (info_short_help): mention Info manuals and the h
	key within the program.

2008-08-10  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (absolute_filenames): preserve even non-directories
	in the returned path, in case they contain metacharacters
	meaningful to TeX, such as braces.
	Bug report from Werner Lemberg, 10 Aug 2008 08:26:58.

2008-07-27  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (xref_files_save): null out TAR_OPTIONS.
	From Jim Meyering.

2008-07-27  Karl Berry  <karl@tug.org>

	* pretest 4.12.93.
	
	* gnulib: import memmem.

2008-07-07  Karl Berry  <karl@gnu.org>

	* install-info/tests/*-test: prefix the template with ii##.

2008-07-06  Karl Berry  <karl@tug.org>

	* pretest 4.12.92.

2008-07-05  Robert Kiesling  <rkiesling@earthlink.net>  (tiny change)

	* makeinfo/node.c (cm_node): move <p> to after anchors, closer to
	<div>.

2008-07-05  Karl Berry  <karl@gnu.org>

	* install-info/tests/ii-0041-test, ii-0050-test: with template,
	have to handle compressed output files differently, or
	the temp files are left behind by distclean.

	* install-info/tests/*-test: use mktemp XXXXXXXX for BSD.
	Report from Unga, 29 Jun 2008 08:29:54.

2008-07-04  Akim Demaille  <akim@epita.fr>

	texi2dvi: Fix -t.
	* util/texi2dvi (run_tex): The code that installs a symlink was
	installing the symlink directly to itself, instead of towards the
	actual source file.  I wonder how it worked.  As a result -t was
	not taken into account.
	Fix the symlink creation.